--- a/PyNetworkD3/templates/export_main.html
+++ b/PyNetworkD3/templates/export_main.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="python d3 network PyNetworkD3">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
         div.tooltip {
             position: absolute;
@@ -21,14 +21,14 @@
             word-wrap: unset;
         }
     </style>
-    $style
+    <script defer src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script defer src="utils.js"></script>
+    <script defer src="main.js"></script>
+
 </head>
 
 <body>
     <div id="pynetworkd3-chart"></div>
-    <script>
-        $code
-    </script>
 </body>
 
 </html>
